fixing button positions on mobile

--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -73,6 +73,7 @@ a {
 @media (max-width: 1010px) {
     .button-1 {
         padding: 5px 10px;
+        margin-top: 20px;
     }
     .button-text {
         font-size: 20px;
